--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,12 @@
 Package: timsac
-Version: 1.1.3
+Version: 1.2.1
 Title: TIMe Series Analysis and Control package
 Author: The Institute of Statistical Mathematics
-Maintainer: The Institute of Statistical Mathematics <timsac@jasp.ism.ac.jp>
-Depends: R (>= 2.1.0)
+Maintainer: The Institute of Statistical Mathematics
+        <timsac@jasp.ism.ac.jp>
+Depends: R (>= 2.4.0)
 Description: Time series analysis and control program package TIMSAC.
-License: GPL (version 2 or later) See file LICENCE.
-Packaged: Thu Feb 19 14:22:56 2009; hornik
+License: GPL (>= 2)
+Packaged: Sat Mar 21 12:27:44 2009; msaga
+Repository: CRAN
+Date/Publication: 2009-03-21 08:16:26
