--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@ useDynLib(timsac)
 export(autcor, mulcor, fftcor, auspec, mulspe, sglfre, mulfrf, fpeaut, fpec, mulnos, raspec, mulrsp, optdes, optsim,
        wnoise, autoarmafit, armafit, canarm, covgen, canoca, markov, prdctr, simcon, nonst, thirmo, bispec,
        unimar, unibar, bsubst, mulmar, mulbar, perars, mlocar, blocar, mlomar, blomar, exsar, xsarma, decomp, mfilter,
-       armaimp, tsmooth, ngsmth, tvar, tvvar)
+       armaimp, tsmooth, ngsmth, tvar, tvvar, baysea)
 
 S3method(print, autoarmafit)
 S3method(print, blomar)
