--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: timsac
-Version: 1.3.0
+Version: 1.3.2
 Title: TIMe Series Analysis and Control package
 Author: The Institute of Statistical Mathematics
 Maintainer: Masami Saga <msaga@mtb.biglobe.ne.jp>
@@ -8,7 +8,9 @@ Description: Functions for statistical analysis, prediction and control of time 
 License: GPL (>= 2)
 MailingList: Please send questions and comments regarding timsac to
         ismrp@jasp.ism.ac.jp
-Packaged: 2013-07-24 03:55:55 UTC; msaga
+Packaged: 2014-06-02 02:44:43 UTC; msaga
 NeedsCompilation: yes
+X-CRAN-Comment: Archived on 2015-05-31 as memory access errors were not
+        corrected.
 Repository: CRAN
-Date/Publication: 2013-07-24 08:47:03
+Date/Publication: 2014-06-02 14:52:08
